--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,12 +35,59 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/space_24"
         android:paddingVertical="@dimen/space_12"
+        android:gravity="center"
         android:orientation="horizontal">
         <Spinner
-            android:layout_width=""
-            android:layout_height=""
+            android:id="@+id/main_spinner_langfrom"
+            android:layout_width="@dimen/size_110"
+            android:layout_height="wrap_content"
+            android:background="@drawable/spinner_selector"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_swap"
+            android:layout_marginHorizontal="@dimen/space_24"
+            android:backgroundTint="@color/frozen"/>
+        <Spinner
+            android:id="@+id/main_spinner_langto"
+            android:layout_width="@dimen/size_110"
+            android:layout_height="wrap_content"
+            android:background="@drawable/spinner_selector"/>
     </LinearLayout>
-
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="end">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_100"
+            android:padding="@dimen/space_10"
+            android:background="@drawable/rounded_white"
+            android:textSize="@dimen/text_16"
+            android:inputType="textMultiLine"
+            android:scrollbars="vertical"
+            android:textColor="@color/nyctophile"
+            android:gravity="top|left"
+            android:layout_marginBottom="@dimen/space_10"
+            android:hint="Hanashimasho"/>
+        <Button
+            android:id="@+id/main_translate_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_16"
+            android:padding="@dimen/space_5"
+            android:background="@drawable/rounded_dark"
+            android:textColor="@color/white"
+            android:text="Translate"/>
+    </LinearLayout>
+    <GridView
+        android:id="@+id/main_history"
+        android:layout_marginTop="@dimen/space_24"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/space_10"
+        android:numColumns="1"
+        android:verticalSpacing="@dimen/space_10"
+        android:horizontalSpacing="@dimen/space_10"/>
 </LinearLayout>
