--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
         android:orientation="vertical"
         android:gravity="end">
         <EditText
+            android:id="@+id/main_input"
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_100"
             android:padding="@dimen/space_10"
