--- a/app/src/main/res/layout/activity_detail__translate.xml
+++ b/app/src/main/res/layout/activity_detail__translate.xml
@@ -70,6 +70,8 @@
                 android:id="@+id/detail_from_text"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/size_100"
+                android:textSize="@dimen/text_16"
+                android:textColor="@color/nyctophile"
                 android:padding="@dimen/space_10"
                 android:background="@drawable/rounded_white"
                 android:gravity="top|left"
@@ -103,6 +105,8 @@
                 android:id="@+id/detail_target_text"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/size_100"
+                android:textSize="@dimen/text_16"
+                android:textColor="@color/nyctophile"
                 android:padding="@dimen/space_10"
                 android:background="@drawable/rounded_white"
                 android:gravity="top|left"
